# RPC-date-service

./: Cargo.toml  README.md  build.rs  token.txt
proto/: date_rpc.proto
src/: client.rs  lib.rs  server.rs
