[package]
name = "date-tonic"
version = "0.1.0"
authors = ["ysu <ysu@smail.nju.edu.cn>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[[bin]] # 用来运行 HelloWorld gRPC 客户端的可执行文件
name = "client"
path = "src/client.rs"

[[bin]] # 用来运行 HelloWorld gRPC 服务器的可执行文件
name = "server"
path = "src/server.rs"

[dependencies]
tonic = "0.3"
prost = "0.6"
tokio = { version = "0.2", features = ["macros"] }
chrono = "0.4.22"

[build-dependencies]
tonic-build = "0.3"